fix(breadcrumbs): remove wrap-mode from default (#DS-3760)

--- a/packages/components/breadcrumbs/breadcrumbs.scss
+++ b/packages/components/breadcrumbs/breadcrumbs.scss
@@ -6,7 +6,6 @@
     align-items: center;
     gap: var(--kbq-breadcrumbs-gap);
     flex-grow: 1;
-    flex-wrap: wrap;
 
     .kbq-overflow-items {
         // add space not to cut focus outline
